--- a/M2-BENCHMARK.html
+++ b/M2-BENCHMARK.html
@@ -208,18 +208,18 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100 h-25" src="gog-assets/carousel1.jpg" alt="First slide">
-                <div class="carousel-caption">
+                <div class="carousel-caption mx-3 d-flex justify-content-start">
                     <div class="row">
                         <div class="container-fluid d-flex align-items-center justify-content-start h6">
-                            <button type="button" class="btn btn-primary btn-sm d-inline-flex align-items-center h6 px-2">
+                            <button type="button" class="btn btn-primary btn-sm d-inline-flex align-items-center h6 px-2 mb-0">
                                 <i class="fas fa-calendar-alt pr-2 py-1 fa-xs"></i>
                                 <p class="mb-0 align-self-center img-fluid">SOON</p>
                             </button>
-                            <i class="fab fa-windows pl-2 fa-xs"></i>
+                            <i class="fab fa-windows pl-2 fa-xs align-self-center"></i>
                         </div>
                         <div class="row">
-                            <div class="container-fluid d-flex align-items-center justify-content-start">
-                                <p class=""></p>
+                            <div class="container-fluid d-flex align-items-center justify-content-start h2 px-2 mb-2">
+                                <p class="">Game Name 2021</p>
                             </div>
 
                         </div>
